Fix tables overflows.
Sometimes when the text is too long, the page can expand in width, this fixes that

--- a/server/fishtest/static/css/application.css
+++ b/server/fishtest/static/css/application.css
@@ -5,6 +5,8 @@
   --bs-link-hover-color: rgb(var(--bs-link-hover-color-rgb));
   --bs-link-focus-color: rgb(73, 116, 73);
   --bs-secondary-color: #6c757d;
+  --sidebar-width: 180px;
+  --scroll-bar-width: 16px;
 }
 
 @media (max-width: 575.98px) {
@@ -38,10 +40,17 @@
 }
 
 @media (min-width: 992px) {
+  section {
+    max-width: calc(
+      100vw - var(--sidebar-width) - var(--bs-gutter-x) -
+        var(--scroll-bar-width)
+    );
+  }
+
   .layout {
     display: grid;
     grid-template-areas: "sidebar main";
-    grid-template-columns: 180px auto;
+    grid-template-columns: var(--sidebar-width) auto;
   }
 
   .mainnavbar {
@@ -108,7 +117,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 16px;
+  width: var(--scroll-bar-width);
 }
 
 ::-webkit-scrollbar-corner {
